services/photoprism/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photoprism
  labels:
    app.kubernetes.io/name: photoprism
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: photoprism
  template:
    metadata:
      labels:
        app.kubernetes.io/name: photoprism
    spec:
      containers:
      - name: "photoprism"
        image: "photoprism:latest"
        imagePullPolicy: "Always"
        ports:
        - name: http
          containerPort: 2342
          protocol: TCP
        volumeMounts:
        - mountPath: /photoprism/originals
          name: photoprism-originals
        - mountPath: /photoprism/storage
          name: photoprism-storage
      volumes:
      - name: photoprism-originals
        persistentVolumeClaim:
          claimName: photoprism-originals
      - name: photoprism-storage
        persistentVolumeClaim:
          claimName: photoprism-storage
