services/photoprism/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photoprism
  labels:
    app.kubernetes.io/name: photoprism
spec:
  selector:
    app.kubernetes.io/name: photoprism
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 2342
    name: http
    protocol: TCP
